--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Oracle DataSource
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+spring.datasource.username=system
+spring.datasource.password=1111
 
+#Model Location
+mybatis.type-aliases-package=com.example.demo.DTO
+
+#Xml Location
+mybatis.mapper-locations=classpath:static/**/*.xml
