환경설정 변경

--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 #Oracle DataSource
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/orcl
 spring.datasource.username=system
 spring.datasource.password=1111
+
+devtools.livereload.enabled=true
 
 #Model Location
 mybatis.type-aliases-package=com.example.demo.DTO
 
 #Xml Location
 mybatis.mapper-locations=classpath:static/**/*.xml
+#thymeleaf SETTing
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+# thymeleaf cache 
+spring.thymeleaf.cache=false
+# templates ERROR
+spring.thymeleaf.check-template-location=true
