--- a/ToyProject/pom.xml
+++ b/ToyProject/pom.xml
@@ -97,6 +97,16 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.10.1</version>
+		</dependency>  
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20140107</version>
+		</dependency>
 
 	<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
 	<dependency>
