--- a/ToyProject/src/main/resources/application.properties
+++ b/ToyProject/src/main/resources/application.properties
@@ -18,3 +18,20 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 # templates ERROR
 spring.thymeleaf.check-template-location=true
+
+#google-OAuth
+spring.security.oauth2.client.registration.google.client-id = 678428893700-fblpi3j427rllho43qs0cupnpl4m8h5i.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
+spring.security.oauth2.client.registration.google.scope = profile,email
+
+spring.profils.include = oauth
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database=oracle
+
+logging.level.org.hibernate=info
+
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
